<resources>
    <string name="app_name">SaveMeApp</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Re-enter Password</string>
    <string name="sign_out">Sign out</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_location">Location</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Welcome</string>
    <string name="maps_api_key">AIzaSyDRydAUnJue93pe0Ey0oJHEZuITxlDvTz0</string>
    <string name="umur">Umur</string>
    <string name="gender">Gender</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="zipcode">Zipcode</string>
    <string name="update">Update</string>
    <string name="nomor_darurat">Nomor Darurat</string>
    <string name="gender_m_f">Gender (M/F)</string>
    <string name="address">Address</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="age">Age</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
</resources>